# helper

./: .dockerignore  README.md
aplicaciones/: .env.example  .gitignore  Makefile  README.md  SPAIN_HELPER_AUDIT.md  docker-compose.yml
aplicaciones/apps/api/: Cargo.toml  Dockerfile
aplicaciones/apps/api/migrations/: 0001_initial.sql  0002_internal_tools.sql  0003_legal_core.sql
aplicaciones/apps/api/src/: config.rs  error.rs  lib.rs  main.rs  security.rs  state.rs  telemetry.rs
aplicaciones/apps/api/src/db/: models.rs
aplicaciones/apps/api/src/legal/: answer.rs  diff.rs  fixtures.rs  mod.rs  models.rs  repository.rs  retrieval.rs  review.rs
aplicaciones/apps/api/src/rag/: agent.rs  citations.rs  embeddings.rs  indexer.rs  llm.rs  loaders.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  qdrant_store.rs  splitter.rs
aplicaciones/apps/api/src/routes/: access.rs  admin.rs  admin_assistant.rs  admin_knowledge.rs  admin_legal.rs  articles.rs  categories.rs  chat.rs  documents.rs  guides.rs  health.rs  mod.rs  rag.rs  search.rs
aplicaciones/apps/api/src/seeds/: mod.rs  seed_content.rs
aplicaciones/apps/api/src/services/: access_key_service.rs  admin_service.rs  article_service.rs  category_service.rs  guide_service.rs  mod.rs  search_service.rs  session_service.rs
aplicaciones/apps/api/src/tool_adapters/: assistant_brain_adapter.rs  knowledge_intake_adapter.rs  mod.rs
aplicaciones/apps/api/tests/: legal_chat.rs  legal_core.rs  tool_adapters.rs
aplicaciones/docs/: demo-cita-previa.md
tools/: README.md
tools/assistant-brain-tool/: Cargo.toml  README.md  (+1 more)
(+69 files in other folders)
