[package]
name = "spain-helper-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index_docs"
path = "src/bin/index_docs.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
hex = "0.4"
pdf-extract = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
assistant-brain-tool = { path = "../../../tools/assistant-brain-tool" }
knowledge-intake-tool = { path = "../../../tools/knowledge-intake-tool" }
shared-contracts = { path = "../../../tools/shared-contracts" }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
walkdir = "2"
